<resources>
    <string name="app_name" translatable="false">CarmonaAdrian_EnterTheCarApp</string>
    <string name="name">Nombre:</string>
    <string name="hint_name">Nombre</string>
    <string name="surnames">Apellidos:</string>
    <string name="hint_surname">Apellidos</string>
    <string name="vehicle">Vehículo:</string>
    <string name="tourism">Turismo</string>
    <string name="motorbike">Moto 10€ / día</string>
    <string name="scooter">Patinete 5€ / día</string>
    <string-array name="vehicles_array">
        <item>@string/tourism</item>
        <item>@string/motorbike</item>
        <item>@string/scooter</item>
    </string-array>
    <string name="fuel">Combustible:</string>
    <string name="diesel">Diésel 25€ / día</string>
    <string name="gasoline">Gasolina 20€ / día</string>
    <string name="electric">Eléctrico 15€ / día</string>
    <string-array name="fuel_array">
        <item>@string/diesel</item>
        <item>@string/gasoline</item>
        <item>@string/electric</item>
    </string-array>
    <string-array name="no_fuel_array">
        <item>No disponible</item>
    </string-array>
    <string name="visa" translatable="false">VISA</string>
    <string name="mastercard" translatable="false">MasterCard</string>
    <string name="euro_6000" translatable="false">Euro 6000</string>
    <string-array name="card_type_array">
        <item>@string/visa</item>
        <item>@string/mastercard</item>
        <item>@string/euro_6000</item>
    </string-array>
    <string name="gps" translatable="false">GPS:</string>
    <string name="rent_days">Días:</string>
    <string name="total_price">Precio TOTAL:</string>
    <string name="gmail" translatable="false">Gmail</string>
    <string name="about">Sobre...</string>
    <string name="about_content">Versión de la aplicación: 1.0\nAutor: Adrian Carmona</string>
    <string name="error_fill_fields">Debes rellenar todo antes de seguir.</string>
    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Sí</string>
    <string name="no" translatable="false">No</string>
    <string name="card_number">Número Tarjeta:</string>
    <string name="hint_card_name" translatable="false">0000 0000 0000 0000</string>
    <string name="expiration_date">Fecha Caducidad:</string>
    <string name="card_type">Tipo Tarjeta:</string>
    <string name="error_valid_date">La fecha no es válida</string>
    <string name="accept">Aceptar</string>
    <string name="payment">Pago</string>
    <string name="order">Pedido</string>
    <string name="proof_payment_title">Justificante de pago de</string>
    <string name="payment_made">Pago realizado</string>
    <string name="pay">Pagar</string>
    <string name="error_valid_card">La tarjeta no es válida</string>
    <string name="rentals">Alquileres</string>
    <string name="back">Volver</string>
    <string name="error_response">Fallo en la respuesta</string>
    <string name="successful_insert_rent">Alquiler insertado correctamente</string>
    <string name="template_price_day">€ / día</string>
</resources>