<?xml version="1.0" encoding="utf-8"?><!-- EnterTheCar - Adrián Carmona Peña -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderSummary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name"
                style="@style/textViews" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/surnames" />

            <TextView
                android:id="@+id/surnames"
                style="@style/textViews" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/vehicle" />

            <TextView
                android:id="@+id/vehicle"
                style="@style/textViews" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fuelLayout"
            style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/fuel" />

            <TextView
                android:id="@+id/fuel"
                style="@style/textViews" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/gps" />

            <TextView
                android:id="@+id/gps"
                style="@style/textViews" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/rent_days" />

            <TextView
                android:id="@+id/rentDays"
                style="@style/textViews" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/total_price"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text=" €"
                android:textAlignment="textStart"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout style="@style/linearsCenter">

            <Button
                android:id="@+id/btnCancel"
                style="@style/btnStyle"
                android:text="@string/cancel" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <Button
                android:id="@+id/btnPay"
                style="@style/btnStyle"
                android:text="@string/pay" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>