<?xml version="1.0" encoding="utf-8"?><!-- EnterTheCar - Adrián Carmona Peña -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <!-- Name -->
        <LinearLayout style="@style/linearsCenter">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/name"
                style="@style/nameData"
                android:hint="@string/hint_name"
                android:inputType="text" />
        </LinearLayout>

        <!-- Surname -->
        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/surnames" />

            <EditText
                android:id="@+id/surnames"
                style="@style/nameData"
                android:hint="@string/hint_surname"
                android:inputType="text" />
        </LinearLayout>

        <!-- Vehicle type -->
        <LinearLayout
            style="@style/linearsCenter"
            android:layout_marginVertical="5dp">

            <TextView
                style="@style/textViews"
                android:text="@string/vehicle" />

            <Spinner
                android:id="@+id/vehicles_spinner"
                style="@style/spinners" />
        </LinearLayout>

        <!-- Fuel type -->
        <LinearLayout
            android:id="@+id/fuelLayout"
            style="@style/linearsCenter"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/textViews"
                android:text="@string/fuel" />

            <Spinner
                android:id="@+id/fuelSpinner"
                style="@style/spinners" />

            <Spinner
                android:id="@+id/noFuelSpinner"
                style="@style/spinners"
                android:visibility="gone" />
        </LinearLayout>

        <!-- GPS -->
        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/gps" />

            <CheckBox
                android:id="@+id/ckxGps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Sí" />
        </LinearLayout>

        <!-- Rent Days -->
        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/rent_days" />

            <LinearLayout style="@style/linearsCenter">

                <EditText
                    android:id="@+id/rentDays"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:hint="000"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <!-- Prize -->
        <LinearLayout style="@style/linearsCenter">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/total_price"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text=" €"
                android:textAlignment="textStart"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </LinearLayout>

    <!-- Rent Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>