<?xml version="1.0" encoding="utf-8"?><!-- EnterTheCar - Adrián Carmona Peña -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentSummary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/card_type" />

            <TextView
                android:id="@+id/cardType"
                style="@style/textViews" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/card_number" />

            <TextView
                android:id="@+id/cardNumber"
                style="@style/textViews" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <TextView
                style="@style/textViews"
                android:text="@string/expiration_date" />

            <TextView
                android:id="@+id/expirationDate"
                style="@style/textViews" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout style="@style/linearsCenter">

            <Button
                android:id="@+id/btnAccept"
                style="@style/btnStyle"
                android:text="@string/accept" />
        </LinearLayout>

        <LinearLayout style="@style/linearsCenter">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabSend"
                style="@style/btnStyle"
                android:src="@drawable/email_arrow_right"
                android:text="@string/send" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>