<?xml version="1.0" encoding="utf-8"?>
<!-- EnterTheCar - Adrián Carmona Peña -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentSummary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            style="@style/linearsCenter">
            <TextView
                style="@style/textViews"
                android:text="@string/card_type"/>

            <TextView
                style="@style/textViews"
                android:id="@+id/cardType"/>
        </LinearLayout>

        <LinearLayout
            style="@style/linearsCenter">
            <TextView
                style="@style/textViews"
                android:text="@string/card_number"/>

            <TextView
                style="@style/textViews"
                android:id="@+id/cardNumber"/>
        </LinearLayout>

        <LinearLayout
            style="@style/linearsCenter">
            <TextView
                style="@style/textViews"
                android:text="@string/expiration_date"/>

            <TextView
                style="@style/textViews"
                android:id="@+id/expirationDate"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <LinearLayout
            style="@style/linearsCenter">
            <Button
                style="@style/btnStyle"
                android:text="@string/accept"
                android:id="@+id/btnAccept" />
        </LinearLayout>

        <LinearLayout
            style="@style/linearsCenter">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/btnStyle"
                android:text="@string/send"
                android:src="@drawable/email_arrow_right"
                android:id="@+id/fabSend" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>